@@ -1,3 +1,5 @@
+  - rename DIR_SEP to SMARTY_DIR_SEP to avoid varname collisions
+    (Monte)
   - changed "link" to "href" in html_image. "link" is still working
     but deprecated (messju)
   - html_image always renders an alt-tag now (default alt="") (messju)
